fixed toList for autograding